# rubikx-3d

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/: scores.csv
docs/: design_document.md  implementation_plan.md  improvements.md
include/core/: CubeFactory.h  Cubie.h  Move.h  RubiksCube.h
include/graphics/: Animation.h  Camera.h  Colors.h  Lighting.h  Renderer.h
include/solver/: Scrambler.h  Solver.h  Solver2x2.h  Solver3x3.h  Solver4x4.h
include/ui/: HUD.h  PatternEditor.h  SolutionPlayer.h
include/utils/: History.h  MathUtils.h  Timer.h
src/: Animation.cpp  Animation.h  Camera.cpp  Colors.cpp  Colors.h  Lighting.cpp  Lighting.h  Renderer.cpp  Renderer.h  main.cpp
src/algorithms/: Algorithms.h  Animation.cpp  Animation.h  Clipping.cpp  Clipping.h  Filling.cpp  Filling.h  Rasterization.cpp  Rasterization.h  Shading.cpp  Shading.h  Transformations.cpp  Transformations.h  Viewing.cpp  Viewing.h  Visibility.cpp  Visibility.h
src/core/: CubeFactory.cpp  Cubie.cpp  Move.cpp  RubiksCube.cpp
src/cube/: CubeFactory.cpp  CubeFactory.h  Cubie.cpp  Cubie.h  Move.cpp  Move.h  RubiksCube.cpp  RubiksCube.h
src/graphics/: Animation.cpp  Camera.cpp  Colors.cpp  Lighting.cpp  Renderer.cpp
src/solver/: PatternLibrary.cpp  PatternLibrary.h  ReverseSolver.cpp  ReverseSolver.h  Scrambler.cpp  Scrambler.h  Solver.cpp  Solver.h  Solver2x2.cpp  Solver2x2.h  Solver3x3.cpp  Solver3x3.h  Solver4x4.cpp  Solver4x4.h
src/ui/: HUD.cpp  HUD.h  Menu.cpp  Menu.h  PatternEditor.cpp  Picking.cpp  Picking.h  SolutionPlayer.cpp  (+5 more)
(+57 files in other folders)
